--- a/war/Gwt_Calculator.html
+++ b/war/Gwt_Calculator.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Calculator</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -41,7 +41,7 @@
       </div>
     </noscript>
 
-    <h1>Martins Calculator</h1>
+    <h1>Calculator</h1>
     <div id="calc"></div>
 
 
