Separated "history" to its own tag in html file. Changed the way isDouble was designd

--- a/war/Gwt_Calculator.html
+++ b/war/Gwt_Calculator.html
@@ -41,9 +41,10 @@
       </div>
     </noscript>
 
-    <h1>Calculator</h1>
-    <div id="calc"></div>
-
-
+    <div id="container">
+    		<h1>Calculator</h1>
+    		<div id="calc"></div>
+		<div id="history"></div>
+	</div>
   </body>
 </html>
